--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,13 @@
   "projects": {
     "test-infotex-app": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+          "@schematics/angular:component": {
+              "standalone": true,
+              "changeDetection": "OnPush",
+              "style": "scss"
+          }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -27,7 +33,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+                "src/main.scss"
             ],
             "scripts": []
           },
@@ -85,6 +91,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -92,5 +99,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "05a74b4b-32f9-4c55-918a-ea281581606e"
   }
 }
