Поправлены маршруты главной страницы

--- a/angular.json
+++ b/angular.json
@@ -19,6 +19,10 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+              "allowedCommonJsDependencies": [
+                  "quill",
+                  "quill-delta"
+              ],
             "outputPath": "dist/test-infotex-app",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -42,8 +46,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "2MB",
+                  "maximumError": "4MB"
                 },
                 {
                   "type": "anyComponentStyle",
